--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,8 +15,10 @@ h1 {
   font-size: 6rem;
   text-align: center;
 }
-h2 {
+h2, a {
+  text-decoration: none;
   color : white;
+  font-size: 2rem;
   text-align: center;
   background: rgba(0, 0, 0, 0.5);
   margin: 0;
