--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
       <section>
         <% for (let i = 0; i < fighters.length; i++) { %>
             <section>
+              <p><%= fighterInfo[i] %></p>
               <a href="<%= fighterLinks[i] %>" target="_blank">
               <img src="<%= fighterImages[i] %>" alt="">
               <h2><%= fighters[i] %></h2></a>
