forgot meta description

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- meta description -->
+    <meta name="description" content="Who are the current UFC champions?">
     <link rel="stylesheet" href="/css/style.css">
     <!-- link favicon -->
     <link rel="icon" href="favicon.png" type="image/x-icon">
-    <title>Document</title>
+    <title>WhoAreTheCurrentUFCChampions.info</title>
 </head>
 <body>
   <main>
