added fade in animation on fighters

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
     <h1>Current UFC Champions</h1>
       <section>
         <% for (let i = 0; i < fighters.length; i++) { %>
-            <section>
+            <section class="fade-in">
               <p><%= fighterInfo[i] %></p>
               <a href="<%= fighterLinks[i] %>" target="_blank">
               <img src="<%= fighterImages[i] %>" alt="">
