--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,3 +54,21 @@ span {
   margin: 2rem 0;
   text-align: center;
 }
+
+/* fade-in animation */
+.fade-in {
+  animation: fadeIn ease 1s;
+  -webkit-animation: fadeIn ease 1s;
+  -moz-animation: fadeIn ease 1s;
+  -o-animation: fadeIn ease 1s;
+  -ms-animation: fadeIn ease 1s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
