--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,9 @@ h2, a {
   background: rgba(0, 0, 0, 0.5);
   margin: 0;
 }
+#website {
+  background: transparent;
+}
 main > section {
   display: flex;
   flex-wrap: wrap;
