fixed formatting for broken fighterinfo path

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,7 @@
         <section class="fighters">
           <p>
             <%= fighterInfo[i] %>
+            )<!--added ')' to fix jamal hill google tag script showing, split at ')' in fighterInfo in index.js-->
           </p>
           <a href="<%= fighterLinks[i] %>" target="_blank">
             <img src="<%= fighterImages[i] %>" alt="">
