--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/css/style.css">
   <!-- link favicon -->
   <link rel="icon" href="favicon.png" type="image/x-icon">
-  <title>WhoAreTheCurrentUFCChampions.info</title>
+  <title>Current UFC Champs</title>
 </head>
 
 <body>
