Added tailwind and restyled a bit

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,152 +1,7 @@
-html {
-  box-sizing: border-box;
-  font-size: 62.5%;
-}
-
-body {
-  background-color: rgba(0,0,0,0.8);
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  color: #FFFFFF;
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-  padding: 2rem;  
-  text-align: center;
-}
-
-main > h1 {
-  margin: 0;
-}
-
-main > section {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  gap: 1rem;
-  max-width: 1600px;
-  margin: 0 auto;
-}
-
-.fighters {
-  position: relative;
-  text-align: center;
-  background: black;
-  padding: 1rem;
-  width: 300px;
-  max-width: 90%;
-  aspect-ratio: 1 / 1;
-  border-radius: 1rem;
-  text-decoration: none;
-}
-
-
-.fighters * {
-  color: #FFFFFF;
-  text-decoration: underline;
-  text-decoration-thickness: 2px;
-  text-underline-offset: 3px;
-  text-decoration-color: rgba(255, 255, 255, 0.2); /* subtle by default */
-  transition: text-decoration-color 0.2s;
-}
-
-.fighters img {
-  width: 100%;
-  height: auto;
-}
-
-.fighters:hover *,
-.fighters:focus *{
-  text-decoration-color: #fff;
-}
-
-.fighters:hover img,
-.fighters:focus img {
-  transform: scale(1.05);
-  transition: all 0.3s ease-in-out;
-} 
-
-#website {
-  color: #FFFFFF;
-  text-decoration: underline;
-  text-decoration-thickness: 2px;
-  text-underline-offset: 3px;
-  text-decoration-color: rgba(255, 255, 255, 0.2); /* subtle by default */
-  transition: text-decoration-color 0.2s;
-}
-
-#website:hover,
-#website:focus {
-  text-decoration-color: #fff;
-}
-/* h1 {
-  color : white;
-  font-size: 6rem;
-  text-align: center;
-}
-h2, a {
-  text-decoration: none;
-  color : white;
-  font-size: 2rem;
-  text-align: center;
-  background: rgba(0, 0, 0, 0.5);
-  margin: 0;
-}
-#website {
-  background: transparent;
-}
-main > section {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  gap: 1rem;
-  max-width: 1600px;
-  margin: 0 auto;
-  color: #FFFFFF;
-}
-
-main section section {
-  width: 300px;
-  background-color: #491111;
-  border: 1px solid #360101;
-  border-radius: 5px;
-  text-align: center;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-  overflow: hidden;
-}
-
-.fighters {
-  position: relative;
-}
-
-.fighters small {
-  display: block;
-  height: 100%;
-  background: #240808;
-}
-
-main section img {
-  width: 100%;
-}
-
-main section img:hover {
-  transform: scale(1.01);
-  transition: all 0.1s ease-in-out;
-}
-
-span {
-  display: block;
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin: 2rem 0;
-  text-align: center;
-} */
-
+@layer theme, base, components, utilities;
+@import "tailwindcss/theme.css" layer(theme);
+@import "tailwindcss/preflight.css" layer(base);
+@import "tailwindcss/utilities.css" layer(utilities);
 /* fade-in animation */
 .fade-in {
   animation: fadeIn ease 1s;
