updated footer to include motion.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,7 +76,7 @@
     <footer class="flex flex-col justify-center items-center gap-2 my-4 font-mono text-xl">
       <span>Content is property of UFC, for educational purposes only.</span>
       <span>Created by: <a href="https://markfehrenbach.me" target="_blank" id="website"
-          class="underline decoration-white/50 hover:decoration-white">markfehrenbach.me</a> using Node, Express, EJS,
+          class="underline decoration-white/50 hover:decoration-white">markfehrenbach.me</a> using Node, Express, EJS, Motion.JS,
         and Tailwind.</span>
     </footer>
   </main>
